--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-   DATABASE_URL=postgresql://neondb_owner:npg_vMieIVajh7m0@ep-polished-waterfall-a1f6i5pa-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+   DATABASE_URL=postgresql://neondb_owner:npg_Mp7ZANWVnRB0@ep-bold-haze-a10y6f8t-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
