--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
 command = "npm run build"
-publish = "dist/public" 
+publish = "dist/public"
+
+[functions]
+directory = "netlify/functions" 
